--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow, noarchive">
-    <title>Test</title>
+    <title>StringWork</title>
 
     <!--    Prod-->
 <!--    <script defer src="dist/main.js"></script>-->
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="margin:0;font-family: sans-serif">
     <div id="root"></div>
 </body>
 
